[gd_scene load_steps=2 format=3 uid="uid://df4m3x6p8o5y"]

[ext_resource type="Script" path="res://networking/MultiplayerMenu.gd" id="1_m4n2p"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4n2p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Seu Nome"
text = "Player"

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Endere√ßo IP (localhost)"
text = "127.0.0.1"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host (Servidor)"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join (Entrar)"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_pressed"]

